--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ApFeitoza - Desenvolvedora e UI/UX Designer</title>
     <meta name="description" content="Front End Developer & UX/UI Designer. Localizada em São Paulo">
     <link rel="stylesheet" href="./css/style.min.css">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
